<resources>
    <string name="app_name">Otwarty Wykop Mobilny 3</string>
    <string name="gallery_gif_chip">GIF</string>
    <string name="gallery_photo_description">Zdjęcie %1$d z %2$d</string>
    <string name="gallery_photo_gif_description">Zdjęcie %1$d z %2$d, GIF</string>
    <string name="gallery_hidden_description">Ukryte zdjęcia (%1$d), dotknij, aby odsłonić</string>
    <plurals name="gallery_photo_count">
        <item quantity="one">%d zdjęcie</item>
        <item quantity="few">%d zdjęcia</item>
        <item quantity="many">%d zdjęć</item>
        <item quantity="other">%d zdjęcia</item>
    </plurals>
    <string name="attachment_remove_photo">Usuń zdjęcie %1$d</string>
    <string name="attachment_remove_embed">Usuń link</string>
    <string name="attachment_add_photo">Dodaj zdjęcie</string>
    <string name="attachment_counter">%1$d/%2$d</string>
    <string name="attachment_photo_limit">Można dodać najwyżej %1$d zdjęcia</string>
    <string name="photo_view_position">%1$d / %2$d</string>
    <string name="update_consent_title">Sprawdzać aktualizacje?</string>
    <string name="update_consent_message">Aplikacja może raz dziennie sprawdzać, czy na GitHubie jest nowa wersja, i powiadomić o niej. Zmienisz to w Ustawieniach → Aktualizacje.</string>
    <string name="update_consent_yes">Tak, sprawdzaj</string>
    <string name="update_consent_no">Nie</string>
    <string name="update_channel_name">Aktualizacje aplikacji</string>
    <string name="update_available_title">Dostępna nowa wersja</string>
    <string name="update_available_content">Wersja %1$s - dotknij, aby pobrać</string>
    <string name="spoiler_dialog_title">Spoiler</string>
    <string name="survey_dialog_title">Nowa ankieta</string>
    <string name="survey_question_hint">Pytanie</string>
    <string name="survey_answer_hint">Odpowiedź</string>
    <string name="survey_add_answer">Dodaj odpowiedź</string>
    <string name="survey_save">Zapisz</string>
    <string name="survey_remove_answer">Usuń odpowiedź</string>
    <string name="survey_min_answers">Podaj pytanie i minimum 2 odpowiedzi</string>
    <string name="survey_min_question_length">Pytanie ankiety musi mieć co najmniej 5 znaków</string>
    <string name="survey_attached">Ankieta: %1$s</string>
    <string name="pm_search_hint">Szukaj rozmów po nicku</string>
    <string name="search">Wyszukiwarka</string>
    <string name="your_profile">Twój profil</string>
    <string name="favourite">Ulubione</string>
    <string name="messages">Wiadomości</string>
    <string name="settings">Ustawienia</string>
    <string name="about">O aplikacji</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="profiles">Użytkownicy</string>
    <string name="actions">Akcje</string>
    <string name="links">Znaleziska</string>
    <string name="link_added">Dodane</string>
    <string name="published">Opublikowane</string>
    <string name="commented">Komentarze</string>
    <string name="buried">Zakopywane</string>
    <string name="digged">Wykopywane</string>
    <string name="entries">Wpisy</string>
    <string name="entries_voted">Plusowane</string>
    <string name="license">Publikacja aplikacji na licencji MIT</string>
    <string name="privacy_policy">Privacy policy/Licencja prywatności</string>
    <string name="report_bug">Zgłoś błąd pod tagiem #owmbugi</string>
    <string name="observe_otwartywykopmobilny">Obserwuj tag #otwartywykopmobilny3</string>
    <string name="app_version">Otwarty Wykop Mobilny 3 (%1$s)</string>
    <string name="badges">Osiągnięcia</string>
    <string name="error_occured">Błąd</string>
    <string name="error_cannot_open_activity">Wystąpił błąd podczas wykonywania akcji %s</string>
    <string name="doubleback_to_exit">Naciśnij wstecz aby wyjść z aplikacji</string>
    <string name="expand_image">rozwiń obrazek</string>
    <string name="newest_entries">Najnowsze wpisy</string>
    <string name="share">Udostępnij</string>
    <string name="save_image">Zapisz obraz</string>
    <string name="copy_url">Skopiuj adres URL</string>
    <string name="user_not_logged_in">Aby tego dokonać, musisz się zalogować.</string>
    <string name="votes_count">%1$d</string>
    <string name="date_with_user_app">%1$s via %2$s</string>
    <string name="thread_context_title">Kontekst wątku</string>
    <string name="votePercentageCount">%1$d%% (%2$d głosów)</string>
    <string name="searchNoResults">Ehh, pusto tu…</string>
    <string name="dialogNoVotes">¯\\_(ツ)_/¯\nBrak plusów</string>
    <string name="refresh">Odśwież</string>
    <string name="load_more_failed">Nie udało się wczytać kolejnej strony</string>
    <string name="load_more_retry">Ponów</string>
    <string name="link_open_failed">Nie udało się otworzyć tego adresu</string>
    <string name="nav_drawer_open">Nawigacja otwarta</string>
    <string name="nav_drawer_closed">Nawigacja zamknięta</string>
    <string name="reply">Odpowiedz</string>
    <string name="copy_entry_url">Skopiuj adres wpisu</string>
    <string name="copied_to_clipboard">Skopiowano do schowka</string>
    <string name="text_italic">Kursywa</string>
    <string name="text_bold">Pogrubienie</string>
    <string name="insert_photo">Dodaj zdjęcie</string>
    <string name="insert_code">Wstaw kod</string>
    <string name="insert_link">Wstaw link</string>
    <string name="insert_spoiler">Wstaw spoiler</string>
    <string name="text_quote">Cytat</string>
    <string name="insert_emoticon">Wstaw emotikonę</string>
    <string name="insert_photo_galery">Dodaj zdjęcie z galerii</string>
    <string name="insert_photo_url">Dodaj zdjęcie lub link (np. YouTube) z adresu URL</string>
    <string name="mark_nsfw">Oznacz jako 18+</string>
    <string name="send">Wyślij</string>
    <string name="observed_tags">Obserwowane tagi</string>
    <string name="add_new_entry">Dodaj nowy wpis</string>
    <string name="edit_entry">Edytuj wpis</string>
    <string name="edit_comment">Edytuj komentarz</string>
    <string name="sending_entry">Wysyłanie wpisu…</string>
    <string name="url_address">Adres url</string>
    <string name="link_description">Opis linku</string>
    <string name="confirmation">Jesteś pewien?</string>
    <string name="confirm_exit">Czy na pewno chcesz wyjść?</string>
    <string name="confirm_app_exit">Czy na pewno chcesz zamknąć aplikację?</string>
    <string name="write_comment">Napisz komentarz…</string>
    <string name="reply_context_thread">Odpowiadasz w wątku @%1$s</string>
    <string name="reply_context_clear">Odpowiedz jako komentarz główny</string>
    <string name="markAsRead">Oznacz jako odczytane</string>
    <string name="read_notifications">Odczytano powiadomienia</string>
    <string name="notifications_title">Powiadomienia</string>
    <string name="hashtags_notifications_title">Obserwowane tagi</string>
    <string name="voters">Plusujący</string>
    <string name="voters_list">Lista plusujących</string>
    <string name="bury">Zakop</string>
    <string name="bury_list">Lista zakopujących (%1$d)</string>
    <string name="dig_list">Lista wykopujących (%1$d)</string>
    <string name="copy_content">Kopiuj treść</string>
    <string name="note_menu_add">Dodaj notatkę</string>
    <string name="note_add_title">Dodaj notatkę</string>
    <string name="note_edit_title">Edytuj notatkę</string>
    <string name="note_dialog_title">Notatka</string>
    <string name="note_dialog_hint">Treść notatki</string>
    <string name="note_save">Zapisz</string>
    <string name="note_cancel">Anuluj</string>
    <string name="note_delete">Usuń notatkę</string>
    <string name="delete">Usuń</string>
    <string name="report">Zgłoś</string>
    <string name="pm_message_read_indicator">%1$s · Przeczytana</string>
    <string name="jump_to_newest">Przejdź do najnowszych</string>
    <string name="jump_to_newest_loading">Ładowanie strony %1$d…</string>
    <string name="mywykop_all">Wszystko</string>
    <string name="tags">Tagi</string>
    <string name="users">Użytkownicy</string>
    <string name="entryRemoved">[Wpis usunięty]</string>
    <string name="commentRemoved">[Komentarz usunięty]</string>
    <string name="comment_deleted_by_host">Komentarz usunięty przez autora wpisu</string>
    <string name="comment_deleted_by_moderator">Komentarz usunięty przez moderację</string>
    <string name="comment_deleted_by_author">Komentarz usunięty przez autora</string>
    <string name="comment_deleted_generic">Komentarz usunięty</string>
    <string name="comment_deleted_by_thread_author_nick">Komentarz usunięty przez autora wpisu (@%1$s)</string>
    <string name="comment_deleted_by_own_author_nick">Komentarz usunięty przez jego autora (@%1$s)</string>
    <string name="deleted_comment_content">Treść usuniętego komentarza</string>
    <string name="click_to_see_content">Kliknij aby zobaczyć treść</string>
    <string name="observe_tag">Obserwuj tag</string>
    <string name="unobserve_tag">Przestań obserwować tag</string>
    <string name="block_tag">Zablokuj tag</string>
    <string name="unblock_tag">Odblokuj tag</string>
    <string name="cancel">Anuluj</string>
    <string name="close">Zamknij</string>
    <string name="related">Powiązane</string>
    <string name="upvoters">Wykopujący</string>
    <string name="downvoters">Zakopujący</string>
    <string name="period24">Gorące wpisy 24h</string>
    <string name="period12">Gorące wpisy 12h</string>
    <string name="period6">Gorące wpisy 6h</string>
    <string name="period2">Gorące wpisy 2h</string>
    <string name="active_entries">Aktywne wpisy</string>
    <string name="sortby_newest">Najnowsze komentarze</string>
    <string name="sortby_best">Najlepsze komentarze</string>
    <string name="sortby_oldest">Najstarsze komentarze</string>
    <string name="notifications_directed">Do mnie</string>
    <string name="fontsize_small">Mała</string>
    <string name="fontsize_tiny">Bardzo mała</string>
    <string name="fontsize_normal">Standardowa</string>
    <string name="fontsize_large">Duża</string>
    <string name="fontsize_huge">Bardzo duża</string>
    <string name="pref_fontsize">Wielkość czcionki</string>
    <string name="upcoming_sortby_comments">Komentowane</string>
    <string name="upcoming_sortby_votes">Wykopywane</string>
    <string name="upcoming_sortby_active">Aktywne</string>
    <string name="upcoming_sortby_date">Najnowsze</string>
    <string name="bury_reason">Powód zakopu</string>
    <string name="reason_duplicate">Duplikat</string>
    <string name="reason_spam">Spam</string>
    <string name="reason_fake_info">Informacja nieprawdziwa</string>
    <string name="reason_wrong_content">Treść nieodpowiednia</string>
    <string name="reason_unsuitable_content">Nie nadaje się</string>
    <string name="january">Styczeń</string>
    <string name="february">Luty</string>
    <string name="march">Marzec</string>
    <string name="april">Kwiecień</string>
    <string name="may">Maj</string>
    <string name="june">Czerwiec</string>
    <string name="july">Lipiec</string>
    <string name="august">Sierpień</string>
    <string name="september">Wrzesień</string>
    <string name="october">Październik</string>
    <string name="novermber">Listopad</string>
    <string name="december">Grudzień</string>
    <string name="whole_year">Cały rok</string>
    <string name="hits_popular">Ostatnio popularne</string>
    <string name="hits_day">Hity dnia</string>
    <string name="hits_week">Hity tygodnia</string>
    <string name="hits_month">Hity miesiąca</string>
    <string name="hits_year">Hity roku</string>
    <string name="hits_archive">Archiwum</string>
    <string name="hits_month_toolbar">Hity miesiąca (%1$d/%2$d)</string>
    <string name="tag_sort_newest">Najnowsze</string>
    <string name="tag_sort_best">Najlepsze</string>
    <string name="tag_archive">Archiwum</string>
    <string name="tag_archive_reset">Resetuj</string>
</resources>