<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_observe"
        android:icon="@drawable/ic_observe_dark"
        android:visible="false"
        android:title="@string/observe_tag"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_unobserve"
        android:icon="@drawable/ic_unobserve_dark"
        android:visible="false"
        android:title="@string/unobserve_tag"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_block"
        android:icon="@drawable/ic_lock_dark"
        android:title="@string/block_tag"
        android:visible="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_unblock"
        android:icon="@drawable/ic_lock_open"
        android:visible="false"
        android:title="@string/unblock_tag"
        app:showAsAction="never"
        />

    <!-- Sortowanie - osobna sekcja (radio), Najnowsze domyslnie zaznaczone. -->
    <group
        android:id="@+id/group_tag_sort"
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/tag_sort_newest"
            android:checked="true"
            android:title="@string/tag_sort_newest"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/tag_sort_best"
            android:title="@string/tag_sort_best"
            app:showAsAction="never"
            />
    </group>

    <!-- Archiwum - osobna sekcja; Resetuj widoczne tylko w trybie archiwalnym. -->
    <group android:id="@+id/group_tag_archive">

        <item
            android:id="@+id/tag_archive"
            android:title="@string/tag_archive"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/tag_archive_reset"
            android:title="@string/tag_archive_reset"
            android:visible="false"
            app:showAsAction="never"
            />
    </group>

</menu>
